--- a/includes/index.html
+++ b/includes/index.html
@@ -18,5 +18,7 @@
     of code.</p>
   <button onclick="greetings()">Say hello</button>
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
